static/scripts/style.css
@font-face {
	font-family: 'Montserrat Light';
	src: url("../fonts/Montserrat-Light.woff");
}

@font-face {
	font-family: 'Montserrat Hairline';
	src: url("../fonts/Montserrat-Hairline.woff");
}

@keyframes fade_in {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes zoom_in {
	from {
		transform: scale(0);
	}
	to {
		transform: scale(1);
	}
}

html, body {
	height: 100%;
	margin: 0;
	font-family: 'Montserrat Light', Helvetica;
	font-weight: 150;
}

header, section {
	display: flex;
	flex-direction: column;
	min-height: 100%;
}

.first_background {
	background: white;
}

.second_background {
	background: whitesmoke;
}

.row {
	display: flex;
	flex: 1;
	column-gap: 2rem;
	padding-bottom: 1rem;
}

.center_y {
	align-items: center;
}

.column {
	flex: 1;
}

.multicolumn .column {
	align-self: stretch;
}

.column_2 {
	flex: 2;
}

.extra_column {
	display: none;
}

h1, h2, h3 {
	margin: 0;
}

h1 {
	font-family: 'Montserrat Hairline', Helvetica;
	font-size: 3.75rem;
	font-weight: 150;
	text-transform: uppercase;
	letter-spacing: -0.055rem;
	margin-bottom: 0.75rem;
	color: teal;
}

h1#name {
	opacity: 0;
	animation: fade_in 1s ease 1s forwards;
}

h2#subtitle {
	font-size: 1.5rem;
	font-weight: 150;
	color: slategray;
	text-transform: uppercase;
	margin-bottom: 1.75rem;
	opacity: 0;
	animation: fade_in 1s ease 2s forwards;
}

section h3 {
	color: slategray;
}

h3#description {
	font-size: 1.25rem;
	font-weight: 150;
	margin-bottom: 3rem;
	opacity: 0;
	animation: fade_in 1s ease 3s forwards;
}

#logo {
	display: block;
	float: right;
	width: 75%;
	height: auto;
	transform: scale(0);
	animation: zoom_in 3s ease 5s forwards;
}

#logo::after {
	content: '';
	clear: both;
	display: table;
}

.button {
	display: inline-block;
	color: white;
	padding: 1.25rem 2rem;
	text-align: center;
	text-decoration: none;
	text-transform: uppercase;
	box-shadow: inset 0 0 0 0 white;
	transition: ease-out 0.4s;
	margin-right: 0.75rem;
}

.first_background .button, header .button {
	background: midnightblue;
	border: 0.1rem solid midnightblue;
	transform: scale(0);
	animation: zoom_in 1s ease 4s forwards;
}

.second_background .button {
	background: teal;
	border: 0.1rem solid teal;
}

.button:hover {
	box-shadow: inset -35rem 0 0 0 white;
}

.first_background .button:hover, header .button:hover {
	color: midnightblue;
}

.second_background .button:hover {
	color: teal;
}

.padding {
	padding: 0% 10%;
}

@media only screen and (max-width: 768px) {
	html, body {
		font-size: 0.75rem;
	}

	h1#name, h2#subtitle, h3#description {
		text-align: center;
	}

	.row {
		flex-direction: column;
		gap: 0;
		padding: 0;
	}

	header .row {
		flex-direction: column-reverse;
	}

	.column {
		width: 100%;
	}

	#logo {
		width: 100%;
		margin-top: 2rem;
	}

	.button {
		display: block;
		text-decoration: none;
		margin-bottom: 2rem;
		margin-right: 0;
	}

	.padding {
		padding: 0% 5%;
	}
}

@media only screen and (max-width: 1024px) {
	html, body {
		font-size: 0.75rem;
	}

	.column_2 {
		flex: 1;
	}

	.padding {
		padding: 0% 5%;
	}
}

